compiler/testData/diagnostics/tests/resolve/kt47884.fir.kt
interface A<X>
class B<T>

fun foo(a: A<*>, b: B<*>): Boolean = <!EQUALITY_NOT_APPLICABLE_WARNING!>a == b<!>
